# DnDCombatEngine

./: .gitignore  BETA_TESTER_REPORTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVNOTES.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: package.yml  tests.yml
.pytest_tmp/test_campaign_controller_persi0/campaigns/: starter.json
.pytest_tmp/test_character_controller_appl0/characters/: cleric.json
.pytest_tmp/test_character_import_controll0/characters/: lyra_thorn.json
.pytest_tmp/test_character_import_controll1/campaigns/: starter.json
.pytest_tmp/test_character_import_controll1/characters/: edited_name.json
.pytest_tmp/test_character_import_controll2/campaigns/: starter.json
.pytest_tmp/test_character_import_controll3/campaigns/: starter.json
.pytest_tmp/test_character_import_controll3/characters/: lyra_thorn.json  lyra_thorn_2.json
.pytest_tmp/test_character_import_service_0/: sheet.txt
.pytest_tmp/test_cli_activates_campaign0/campaigns/: starter_campaign.json
.pytest_tmp/test_gui_session_round_trips_t0/: session.json
THIRD_PARTY_LICENSES/: SRD.md
data/actions/: channel_divinity_divine_spark.json  channel_divinity_preserve_life.json  unarmed_attack.json  weapon_attack.json
data/campaigns/: starter_campaign.json
data/characters/: bran.json  ravenisis.json  vale.json
data/class_spell_lists/: cleric.json
data/encounters/: roadside_ambush.json
data/equipment/: longbow.json  rapier.json  srd_equipment.json
data/monsters/: goblin.json
data/spells/: beacon_of_hope.json  bless.json  cure_wounds.json  guiding_bolt.json  hex.json  lesser_restoration.json  revivify.json  sacred_flame.json  thaumaturgy.json
data/srd_catalog/: srd_species_traits_level_1_10.json
docs/: action-bar.md  beta-feedback.md  campaign-hosting.md  dm-workflow.md  import-character-sheet.md  release-test-plan.md  srd-design-guide.md  user-guide.md
examples/: quick_attack.py
packaging/: DnDCombatEngine.iss  DnDCombatEngine.spec  DnDCombatEngine.wxs
scripts/: build_installer.ps1  build_msi.ps1  build_srd_catalog.py  build_windows.ps1  enrich_character_inventories.py  enrich_srd_equipment.py  install_gh_portable.ps1  test_msi_install.ps1
src/dnd_combat_engine/: __init__.py  __main__.py  app.py  cli.py  gui_app.py  srd_spells.py  version.py
tests/: test_abilities.py  test_action_bar.py  test_action_bar_activation.py  test_action_economy.py  test_app.py  test_attacks.py  test_beta_reports.py  test_campaign_controller.py  test_campaign_service.py  test_campaigns.py  test_character.py  test_character_controller.py  test_character_imports.py  test_cli.py  test_combat_controller.py  test_combat_features.py  test_combat_log.py  test_combat_log_controller.py  test_combat_service.py  test_compendium_controller.py  test_compound_dice_service.py  test_concentration.py  test_conditions.py  test_controller_errors.py  test_damage_profile.py  test_dice.py  test_dice_controller.py  test_docs.py  test_effect_resolver.py  test_effects.py  test_encounter_controller.py  test_encounter_service.py  test_encounters.py  test_equipment.py  test_events_and_rules.py  test_examples.py  test_gui.py  test_gui_actions.py  test_gui_commands.py  test_gui_dice_bar.py  (+36 more)
tests/gui/: test_action_bar_smoke.py
(+151 files in other folders)
