[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnd-combat-engine"
version = "0.1.0"
description = "A layered, event-driven Dungeons & Dragons combat engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ravenisis" }]
dependencies = []

[project.scripts]
dnd-combat-engine = "dnd_combat_engine.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
gui = [
  "PySide6>=6.7",
]
installer = [
  "build>=1.2",
  "PyInstaller>=6.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dnd_combat_engine = ["data/**/*.json"]

[tool.pytest.ini_options]
addopts = "-q --cov=dnd_combat_engine --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
